plugins {
    id 'java'
}

group 'ru.calculator'

sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17

ext {
    javaMainClass = "ru.calculator.CalcDemo"
}


int startHeapSize = 512
int maxHeapSize = 512
String GC = "-XX:+UseG1GC"

tasks.register('runWithOptionsForJVM', Exec) {
    dependsOn jar
    group = "Execution"
    description = "Run the mainClass from the output jar in classpath with ExecTask"
    String showVersion = "-showversion"
    String linecommands= "-XX:+PrintCommandLineFlags"
    String startHeap = "-Xms" + "${startHeapSize}" + "m"
    String maxHeap = "-Xmx" + "${maxHeapSize}" + "m"
    String loggingArgs = "-Xlog:gc=debug:file=./logs/gc-%p-%t.log:tags,uptime,time,level:filecount=5,filesize=10m"
    String HeapDumpOnOff = "-XX:+HeapDumpOnOutOfMemoryError"
    String HeapDump = "-XX:HeapDumpPath=./logs/heapdump.hprof"
    String XXUnlockDiagnostics = "-XX:+UnlockDiagnosticVMOptions"
    String XXNMT = "-XX:NativeMemoryTracking=summary"
    String XXprintNMT ="-XX:+PrintNMTStatistics"
    String XXHeapAnalitics = "-XX:+PrintCodeHeapAnalytics"
    commandLine "java",showVersion,linecommands, loggingArgs, startHeap, maxHeap, GC, HeapDumpOnOff, HeapDump,"-classpath", sourceSets.main.runtimeClasspath.getAsPath(), javaMainClass
    println(args.join("\n"))
}




